--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "url": "https://github.com/actions/typescript-action/issues"
   },
   "keywords": [
-    "actions"
+    "ssh",
+    "ec2",
+    "ssm",
+    "aws"
   ],
   "exports": {
     ".": "./dist/index.js"
@@ -24,7 +27,7 @@
   },
   "scripts": {
     "bundle": "npm run format:write && npm run package",
-    "ci-test": "NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 npx jest",
+    "ci-test": "NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 npx vitest",
     "coverage": "npx make-coverage-badge --output-path ./badges/coverage.svg",
     "format:write": "npx prettier --write .",
     "format:check": "npx prettier --check .",
@@ -32,7 +35,7 @@
     "local-action": "npx @github/local-action . src/main.ts .env",
     "package": "npx rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript",
     "package:watch": "npm run package -- --watch",
-    "test": "NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 npx jest",
+    "test": "NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 npx vitest",
     "all": "npm run format:write && npm run lint && npm run test && npm run coverage && npm run package"
   },
   "license": "MIT",
@@ -40,8 +43,7 @@
     "@actions/core": "^1.11.1",
     "@actions/exec": "^1.1.1",
     "@actions/io": "^1.1.3",
-    "@aws-sdk/client-ssm": "^3.808.0",
-    "@aws-sdk/client-sts": "^3.808.0"
+    "@aws-sdk/client-ssm": "^3.808.0"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.9",
@@ -54,6 +56,8 @@
     "@types/node": "^20.17.31",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
+    "@vitest/coverage-v8": "^3.1.3",
+    "aws-sdk-client-mock": "^4.1.0",
     "eslint": "^9.26.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-import-resolver-typescript": "^4.3.4",
@@ -62,12 +66,14 @@
     "eslint-plugin-prettier": "^5.4.0",
     "jest": "^29.7.0",
     "make-coverage-badge": "^1.2.0",
+    "memfs": "^4.17.1",
     "prettier": "^3.5.3",
     "prettier-eslint": "^16.4.2",
     "rollup": "^4.40.2",
     "ts-jest": "^29.3.2",
     "ts-jest-resolver": "^2.0.1",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vitest": "^3.1.3"
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "*"
