--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -13,6 +13,6 @@
     "eslint.config.mjs",
     "jest.config.js",
     "rollup.config.ts",
-    "vitest.config.mts",
+    "vitest.config.mts"
   ]
 }
