--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     "format:check": "npx prettier --check .",
     "lint": "npx eslint .",
     "local-action": "npx @github/local-action . src/main.ts .env",
-    "package": "npx rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript",
+    "package": "ncc build src/index.ts -o dist && ncc build src/cleanup/index.ts -o dist/cleanup",
     "package:watch": "npm run package -- --watch",
     "test": "NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 npx vitest --coverage",
-    "all": "npm run format:write && npm run lint && npm run test && npm run coverage && npm run package"
+    "all": "npm run format:write && npm run lint && npm run test -- --run && npm run package"
   },
   "license": "MIT",
   "dependencies": {
